--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = ">=3.10.0,<3.11"
 functions = "^0.7.0"
 items = "^0.6.5"
 item = "^0.0.3"
+pysimplegui = "^4.60.5"
+numpy = "^1.26.2"
+pandas = "^2.1.4"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
